--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,3 @@
 RewriteEngine on
-RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php??url_param=$1 [L]
+RewriteRule ^(.+)$ index.php?url_param=$1 [L,QSA]
